--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,7 +16,7 @@
             <input type="email" class="login-input" placeholder="Usuário ou email" name="username">
             <input type="password" class="login-input" placeholder="Senha" name="password">
             <button type="submit" class="login-button">Entrar</button>
-            <a href="/Winery/cliente" class="card-link cadastrar mt-3">Cliente novo? Crie sua conta</a>
+            <a href="/Winery/cliente" class="card-link cadastrar" style="margin-top: 15px !important; text-decoration: none !important; color: white;">Cliente novo? Crie sua conta</a>
         </form>
     </div>
 </div>
