--- a/src/main/resources/templates/DetalhesProduto.html
+++ b/src/main/resources/templates/DetalhesProduto.html
@@ -69,9 +69,12 @@ hr{
     margin-top:50px;
 }
 
-body{
-  background-image: url('../imagens/3.png');
-}
+.bodyWinery {
+        background-image: url('https://play.hbomax.com/default-3840x2160.png') !important;
+        background-size: cover !important;
+        background-repeat: no-repeat !important;
+        background-attachment: fixed !important;
+    }
 
 .sub-imagens-container {
     max-width: 100%;
@@ -105,22 +108,41 @@ body{
 
 
 </style>
-<body>
+<body class="bodyWinery">
 
-<nav class="navbar navbar-expand-lg bg-body-tertiary corFundo">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="/Winery">
-            <img th:src="@{/imagens/logoWinery250x250new.png}" width="150px" alt="Logo da Winery">
-        </a>
-
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary"
+    style="background-color: transparent !important; margin-right: 15px; margin-left: 15px; padding-top: 20px !important;">
+    <div class="container-fluid d-flex justify-content-center">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="#">
+                        Vinhos
+                    </a>
+                </li>
 
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="#">
+                        Vinicolas
+                    </a>
+                </li>
 
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="#">
+                        Espumante
+                    </a>
+                </li>
             </ul>
+
+            <a class="navbar-brand" href="/Winery"
+                style="position: absolute; left: 50%; transform: translateX(-50%);">
+                <img th:src="@{/imagens/logoWinery250x250new.png}" width="175px" alt="Logo da Winery">
+            </a>
 
             <ul class="navbar-nav ml-auto">
 
@@ -132,19 +154,24 @@ body{
                         <span id="carrinhoItens">0</span>
                     </a>
                 </li>
-                <li class="nav-item ml-auto">
-                    <a class="nav-link text-white" href="#">
-                        Faça login/crie seu login
-                    </a>
-                </li>
+                <div  id="perfil-button">
+                <a class="nav-link text-white dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">
+                    Meu perfil
+                  </a>
+                  <div class="dropdown-menu dropdown-menu-end" style="background-color: #1e1a28;" aria-labelledby="perfil-button">
+                    <a class="dropdown-item text-white" href="/cliente/winery">Meus Dados</a>
+                    <a class="dropdown-item text-white" href="/authentication/logout" onclick="showLogoutMessage()">Sair</a>
+                </div>
+                </div>
+                
             </ul>
         </div>
     </div>
 </nav>
 
-<div class="container fundo-container mt-3">
+<div class="container mt-4 p-2" style="background-color: #1e1a28; border: 1px !important; box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5) !important; border-radius: 14px;">
     <h1 class="text-center" id="nome" th:text="${produto.nomeProduto}"></h1>
-    <hr>
+    <hr class="text-white">
 
     <div class="row">
         <th:block th:each="imagem, iterStat : ${produto.imagens}">
@@ -168,19 +195,19 @@ body{
 
 
         <div class="col-md-6">
-            <form class="form-horizontal">
+            <form class="form-horizontal mt-5">
                 <p style="display: none;" id="produtoId" th:text="${produto.idProduto}"></p>
                 <p style="display: none;" id="estoque" th:text="${produto.qtdEstoque}"></p>
 
             
                 <div class="form-group price_elem row mt-2">
-                    <label class="col-sm-3 col-md-3 form-control-label nopaddingtop teeexto">Preço:</label>
+                    <h5 class="col-sm-3 col-md-3 form-control-label nopaddingtop teeexto">Preço:</h5>
                     <div class="col-sm-8 col-md-9">
-                        <span id="preco" th:text="'R$ ' + ${produto.precoProduto}" class="product-form-price teeexto"></span>
+                        <h5 id="preco" th:text="'R$ ' + ${produto.precoProduto}" class="product-form-price teeexto"></h5>
                     </div>
                 </div>
                 <div class="form-group row mt-5">
-                    <label class="col-sm-3 col-md-3 form-control-label teeexto">Avaliação:</label>
+                    <h5 class="col-sm-3 col-md-3 form-control-label teeexto">Avaliação:</h5>
                     <div class="col-sm-8 col-md-9">
                         <div style="display: flex; align-items: center;">
                             <div id="star-rating"></div>
@@ -189,23 +216,24 @@ body{
                     </div>
                 </div>
                 <div class="form-group row mt-5">
-                    <label class="col-sm-3 col-md-3 form-control-label teeexto">Descrição detalhada:</label>
+                    <h5 class="col-sm-3 col-md-3 form-control-label teeexto">Descrição detalhada:</h5>
                     <div class="col-sm-9 col-md-8 description teeexto">
-                        <p id="descricao" th:text="${produto.descricaoProduto}"></p>
+                        <h5 id="descricao" th:text="${produto.descricaoProduto}"></h5>
                     </div>
                 </div>
                 <div class="form-group row mt-3">
-                    <label class="col-sm-3 col-md-3 form-control-label teeexto">Quantidade:</label>
+                    <h5 class="col-sm-3 col-md-3 form-control-label teeexto">Quantidade:</h5>
                     <div class="col-sm-8 col-md-5">
                         <div class="input-group">
-                            <button type="button" class="btn" id="decrementButton" style="background: linear-gradient(to bottom, #4F0599, #7A0707); color: white;">-</button>
+                            <button type="button" class="btn" id="decrementButton" style="background: linear-gradient(to bottom, #4F0599, #7A0707); color: white; border: none !important;">-</button>
                             <input type="text" class="form-control text-center" id="quantityInput" value="1">
-                            <button type="button" class="btn" id="incrementButton" style="background: linear-gradient(to bottom, #4F0599, #7A0707); color: white;">+</button>
+                            <button type="button" class="btn" id="incrementButton" style="background: linear-gradient(to bottom, #4F0599, #7A0707); color: white; border: none !important;">+</button>
                         </div>
                     </div>
                 </div>
                 <div class="form-group text-center mt-5">
                     <button type="button" class="btn btn-primary btn-lg botao-padrao" id="comprarButton">Comprar</button>
+                    <p class="mt-2">ou <a href="/Winery" style="text-decoration: none !important;">Continuar comprando</a></p>
                 </div>
                
             </form>
@@ -214,6 +242,143 @@ body{
     </div>
 </div>
 
+<!-- Remove the container if you want to extend the Footer to full width. -->
+<div class="bg-body-tertiary " style="background-color: transparent !important; margin-top: 100px;">
+    <!-- Footer -->
+    <footer class="text-center text-lg-start text-white" style="background-color: transparent !important;">
+        <!-- Grid container -->
+        <div class="container p-4 pb-0">
+            <!-- Section: Links -->
+            <section class="">
+                <!--Grid row-->
+                <div class="row">
+                    <!--Grid column-->
+                    <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
+                        <img class="mb-3" th:src="@{/imagens/logoWinery250x250new.png}" width="150px" alt="Logo da Winery">
+
+                        <p>
+                            Alguma dúvida? A gente ajuda você! <br>
+                            Horario de Atendimento: <br>
+                            De segunda a sexta-feira de 08h as 18h. Exceto feriados.
+                        </p>
+                    </div>
+                    <!--Grid column-->
+
+                    <!--Grid column-->
+                    <div class="col-lg-2 col-md-6 mb-4 mb-md-0">
+                        <h5 class="text-white">Sobre a Winery</h5>
+
+                        <ul class="list-unstyled mb-0">
+                            <li>
+                                <a href="https://github.com/anaguimaraess/Winery" class="text-white"
+                                    style="text-decoration: none;">GitHub</a>
+                            </li>
+                            <li>
+                                <a href="#!" class="text-white" style="text-decoration: none;">Sobre Nós</a>
+                            </li>
+
+                        </ul>
+                    </div>
+                    <!--Grid column-->
+
+                    <!--Grid column-->
+                    <div class="col-lg-2 col-md-6 mb-4 mb-md-0">
+                        <h5 class="text-white">Suporte</h5>
+
+                        <ul class="list-unstyled mb-0">
+                            <li>
+                                <a href="#!" class="text-white" style="text-decoration: none;">Política de Frete</a>
+                            </li>
+                            <li>
+                                <a href="#!" class="text-white" style="text-decoration: none;">Política de
+                                    Privacidade</a>
+                            </li>
+                            <li>
+                                <a href="#!" class="text-white" style="text-decoration: none;">Termos de
+                                    Condições</a>
+                            </li>
+
+                        </ul>
+                    </div>
+                    <!--Grid column-->
+
+                    <!--Grid column-->
+                    <div class="col-lg-2 col-md-6 mb-4 mb-md-0">
+                        <h5 class="text-white">Categorias</h5>
+
+                        <ul class="list-unstyled mb-0">
+                            <li>
+                                <a href="#!" class="text-white" style="text-decoration: none;">Lançamentos</a>
+                            </li>
+                            <li>
+                                <a href="#!" class="text-white" style="text-decoration: none;">Vinho Tinto</a>
+                            </li>
+                            <li>
+                                <a href="#!" class="text-white" style="text-decoration: none;">Vinho Branco</a>
+                            </li>
+                            <li>
+                                <a href="#!" class="text-white" style="text-decoration: none;">Promoções</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <!--Grid column-->
+
+                    <!--Grid column-->
+                    <div class="col-lg-2 col-md-6 mb-4 mb-md-0">
+                        <h5 class="text-white">Formas de Pagamento</h5>
+
+                        <ul class="list-unstyled mb-0">
+                            <img th:src="@{/imagens/formaPagamento.webp}" width="200px" alt="">
+                        </ul>
+                    </div>
+                    <!--Grid column-->
+                </div>
+                <!--Grid row-->
+            </section>
+            <!-- Section: Links -->
+
+            <hr class="mb-4" />
+
+            <!-- Section: CTA -->
+            <section class="text-center">
+                <img src="https://static.kabum.com.br/conteudo/temas/001/imagens/rodape/selo_empresabuscape_horizontal.png"
+                    width="148" height="30" alt="Empresa reconhecida buscapé" loading="lazy"
+                    class="sc-kpKSZj bigULn">
+                <a href="https://transparencyreport.google.com/safe-browsing/search?url=kabum.com.br&amp;hl=pt-PT"
+                    target="_blank" rel="noreferrer" class="sc-lfYzqA kxaHhl" style="margin-left: 30px;">
+                    <img src="https://static.kabum.com.br/conteudo/temas/001/imagens/rodape/selo-google-site-seguro.png"
+                        alt="GOOGLE SITE SEGURO" width="130" height="46" loading="lazy" class="sc-kpKSZj bigULn"
+                        style="margin-left: 30px;"></a>
+                <img src="https://static.kabum.com.br/conteudo/temas/001/imagens/rodape/selo_ebit_kabum_horizontal.png"
+                    width="150" height="36" alt="Ebit diamante excelente" loading="lazy" class="sc-kpKSZj bigULn"
+                    style="margin-left: 30px;"></a>
+                <a id="seloEconfy" href="https://www.compreconfie.com.br/103388" target="_blank" rel="noreferrer"
+                    class="sc-lfYzqA kxaHhl" style="margin-left: 30px;">
+                    <img class="sc-kpKSZj bigULn compreConfieImg"
+                        src="https://selo.compreconfie.com.br/reputation/103388.png" width="57" height="60"
+                        alt="Compre e confie" loading="lazy" style="margin-left: 30px;"></a>
+                <img src="https://static.kabum.com.br/conteudo/temas/001/imagens/rodape/selo-ra.png" height="60"
+                    alt="Empresa campeã prêmio reclame aqui 2022" loading="lazy" class="sc-kpKSZj bigULn"
+                    style="margin-left: 30px;">
+            </section>
+            <!-- Section: CTA -->
+
+            <hr class="mb-4" />
+
+            <!-- Section: Social media -->
+        </div>
+        <!-- Grid container -->
+
+        <!-- Copyright -->
+        <div class="text-center p-3" style="background-color: transparent !important;">
+            © 2023 Copyright por Winery
+
+        </div>
+        <!-- Copyright -->
+    </footer>
+    <!-- Footer -->
+</div>
+<!-- End of .container -->
 
 <script>
 
