--- a/src/main/resources/templates/checkoutPagamento.html
+++ b/src/main/resources/templates/checkoutPagamento.html
@@ -17,16 +17,16 @@
         background-attachment: fixed !important;
     }
 
-.nome-produto {
-    width: 200px; 
-    overflow: hidden; 
-}
+    .nome-produto {
+        width: 200px;
+        overflow: hidden;
+    }
 
-.quantidade-produto,
-.preco-produto {
-    background-color: transparent;
-    border: none;
-}
+    .quantidade-produto,
+    .preco-produto {
+        background-color: transparent;
+        border: none;
+    }
 
     .corFundo {
         background: linear-gradient(to bottom, #000000, #000000f0);
@@ -117,7 +117,7 @@
 
             </div>
 
-            <div class="col-7 mt-2" style="background-color: transparent;">
+            <div class="col-7 mt-3" style="background-color: transparent;">
                 <div class="container" id="divEndereco">
                     <div class="row mt-2">
                         <div class="col-12 col-md-12">
@@ -139,11 +139,11 @@
                             <h6 id="" class="text-white">Endereço de entrega</h6>
                             <small class="text-white">Este é o endereço onde seu pedido será enviado</small>
                             <hr class="text-white">
-                            <small class="text-white" id="ruaLogado" ></small> <br>
+                            <small class="text-white" id="ruaLogado"></small> <br>
                             <small class="text-white" id="bairroLogado"></small> <br>
-                            <small class="text-white" id="cepLogado" ></small> <br>
-                            <small class="text-white" id="cidadeUfLogado" ></small> <br>
-                            <small class="text-white" id="complementoLogado" ></small> <br>
+                            <small class="text-white" id="cepLogado"></small> <br>
+                            <small class="text-white" id="cidadeUfLogado"></small> <br>
+                            <small class="text-white" id="complementoLogado"></small> <br>
                         </div>
                     </div>
                 </div>
@@ -162,6 +162,26 @@
                         </div>
                         <hr class="text-white">
                         <ul class="list-group mb-3" style="background-color: transparent;" id="carrinho-lista">
+                            <li class="list-group-item py-3"
+                                style="background-color: #1e1a28; border: none !important; box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5) !important;">
+                                <div class="row">
+                                    <div class="col-md-3 text-white">
+                                        <strong>Nome do Produto</strong>
+                                    </div>
+                                    <div class="col-md-3 text-white">
+                                        <strong></strong>
+                                    </div>
+                                    <div class="col-md-2 text-white">
+                                        <strong>Quantidade</strong>
+                                    </div>
+                                    <div class="col-md-2 text-white">
+                                        <strong></strong>
+                                    </div>
+                                    <div class="col-md-2 text-white">
+                                        <strong>Valor</strong>
+                                    </div>
+                                </div>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -194,7 +214,7 @@
                             <h6 class="text-white" id="formaPagamentoSelecionada"><b>Forma de Pagamento:</b>
                                 <span id="formaPagamentoSelecionadaValor"></span>
                             </h6>
-                            
+
                             <span id="parcelasTexto" style="color: white;"></span>
 
                             <h3 class="text-white mt-4" id="valorTotal"><b>Total:</b></h3>
@@ -203,7 +223,7 @@
 
 
                     <div class="d-grid gap-2 mb-5 me-5 ms-5 mt-5">
-                        <button class="btn btn-primary botaoPadrao" type="button">Finalizar</button>
+                        <button class="btn btn-primary botaoPadrao" type="button" onclick="enviarPedidoParaServidor(this)">Finalizar</button>
                         <button class="btn btn-outline-warning" onclick="window.history.back();"
                             type="button">Voltar</button>
                     </div>
@@ -353,153 +373,8 @@
     </div>
     <!-- End of .container -->
 
+    <script src="/js/checkout.js"></script>
 
-
-    <script>
-
-
-        function exibirFormaDePagamento() {
-            const formaPagamentoValor = localStorage.getItem('formaPagamento');
-            const formaPagamentoValorElement = document.getElementById('formaPagamentoSelecionadaValor');
-
-            const formaPagamentoMap = {
-                pix: "PIX",
-                boleto: "Boleto Bancário",
-                cartaoDeCredito: "Cartão de Crédito",
-            };
-
-            if (formaPagamentoValorElement && formaPagamentoValor) {
-                const formaPagamentoTexto = formaPagamentoMap[formaPagamentoValor] || formaPagamentoValor;
-                formaPagamentoValorElement.innerText = formaPagamentoTexto;
-            }
-        }
-
-        function getFormaPagamentoText(formaPagamento) {
-            const formaPagamentoMap = {
-                cartaoDeCredito: "Cartão de Crédito",
-            };
-
-            return formaPagamentoMap[formaPagamento] || formaPagamento;
-        }
-
-
-        document.addEventListener("DOMContentLoaded", () => {
-            exibirFormaDePagamento()
-            exibirProdutosNoCheckout()
-            recuperarEndereco();
-            recuperarValores();
-        })
-        function exibirProdutosNoCheckout() {
-    const carrinho = JSON.parse(localStorage.getItem('carrinho'));
-    const carrinhoLista = document.getElementById("carrinho-lista");
-
-    carrinho.forEach((produto) => {
-        const li = document.createElement("li");
-        li.classList.add("list-group-item", "d-flex", "justify-content-between", "align-items-center");
-
-        // Criação de spans para nome, quantidade e preço
-        const nomeSpan = document.createElement("span");
-        const quantidadeSpan = document.createElement("span");
-        const precoSpan = document.createElement("span");
-
-        // Adiciona as classes necessárias para estilização
-        nomeSpan.classList.add("nome-produto", "mr-3");
-        quantidadeSpan.classList.add("quantidade-produto", "mr-3");
-        precoSpan.classList.add("preco-produto");
-
-        // Define os valores dos spans
-        nomeSpan.textContent = produto.nome;
-        quantidadeSpan.textContent = `Qtd: ${produto.quantidade}`;
-        precoSpan.textContent = `R$${produto.preco}`;
-
-        // Adiciona os spans ao <li>
-        li.appendChild(nomeSpan);
-        li.appendChild(quantidadeSpan);
-        li.appendChild(precoSpan);
-
-        // Adiciona o <li> à <ul>
-        carrinhoLista.appendChild(li);
-    });
-}   
-
-        
-
-
-    function recuperarEndereco() {
-            let pedido = JSON.parse(localStorage.getItem('pedido'));
-            var enderecoSalvo = pedido.endereco;
-
-
-    console.log("aaaaaa ", enderecoSalvo)
-    // Preencha os campos com os dados do endereço, se disponíveis
-    document.getElementById('ruaLogado').innerText = 'Rua ' + (enderecoSalvo ? enderecoSalvo.logradouro  : 'Endereço não disponível');
-    document.getElementById('bairroLogado').innerText = enderecoSalvo ? enderecoSalvo.bairro : 'Endereço não disponível';
-    document.getElementById('cepLogado').innerText = enderecoSalvo ? enderecoSalvo.cep : 'Endereço não disponível';
-    document.getElementById('cidadeUfLogado').innerText = enderecoSalvo ? enderecoSalvo.cidade + ' - ' + enderecoSalvo.uf : 'Endereço não disponível';
-    document.getElementById('complementoLogado').innerText = enderecoSalvo ? enderecoSalvo.complemento : 'Endereço não disponível';
-}
-
-function recuperarValores()  { 
-    let pedido = JSON.parse(localStorage.getItem('pedido'));
-
-    if (pedido) {
-        let valorTotal = pedido.valorTotal || 0;
-        let valorFrete = pedido.valorFretePedido || 0;
-        let formaPagamentoSelecionada = pedido.formaPagamento || 'Não especificada';
-
-        let totalProdutos = valorTotal - valorFrete;
-
-            document.getElementById('valorDosProdutos').innerHTML += ` R$${totalProdutos.toFixed(2)}`;
-        document.getElementById('valorFrete').innerHTML += ` R$${valorFrete.toFixed(2)}`;
-        
-        let valorTotalElement = document.getElementById('valorTotal');
-        valorTotalElement.innerHTML += ` R$${pedido.valorTotal.toFixed(2)}`;
-    } else {
-        console.error('Pedido não encontrado no localStorage.');
-    }
-
-
-    if (pedido) {
-    let formaPagamentoSelecionadaValor = pedido.formaPagamento || '';
-
-    if (formaPagamentoSelecionadaValor.toLowerCase() === 'cartaodecredito') {
-        let numeroParcelas = pedido.numeroParcelas || 1;
-        let valorParcela = (pedido.valorTotal / numeroParcelas).toFixed(2);
-
-        // Atualiza o texto do span
-        let parcelasTexto = `${numeroParcelas} parcelas de R$ ${valorParcela}`;
-        document.getElementById('parcelasTexto').innerText = parcelasTexto;
-
-        // Exibe o span
-        document.getElementById('parcelasTexto').style.display = 'inline';
-    }
-} else {
-    console.error('Pedido não encontrado no localStorage.');
-}
-
-};
-
-
-
-        // var pedidoJson = localStorage.getItem('pedido');
-
-        // $.ajax({
-        //     type: 'POST',
-        //     url: '/salvarJson',
-        //     contentType: 'application/json',
-        //     data: JSON.stringify({ pedidoJson: pedidoJson }),
-        //     success: function (response) {
-        //         console.log(data)
-        //         console.log('JSON enviado com sucesso!');
-        //         // Faça algo com a resposta, se necessário
-        //     },
-        //     error: function (error) {
-        //         console.error('Erro ao enviar JSON:', error);
-        //     }
-        // });
-
-
-    </script>
 </body>
 
 </html>
