--- a/src/main/resources/templates/landingPageProduto.html
+++ b/src/main/resources/templates/landingPageProduto.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.2/jquery.rateyo.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.2/jquery.rateyo.min.js"></script>
+    <link th:href="@{/imagens/faviconWinery.png}" rel="shortcut icon" type="image/x-icon">
 
 </head>
 <style>
@@ -69,11 +70,11 @@ nav ul li a:hover {
 }
 
 .bodyWinery {
-            background-image: url('../static/imagens/3.png') !important;
-            background-size: cover !important;
-            background-repeat: no-repeat !important;
-            background-attachment: fixed !important;
-        }
+        background-image: url('https://play.hbomax.com/default-3840x2160.png') !important;
+        background-size: cover !important;
+        background-repeat: no-repeat !important;
+        background-attachment: fixed !important;
+    }
         .corFundo {
             background: linear-gradient(to bottom, #000000, #000000f0);
             border-radius: 14px;
@@ -83,23 +84,45 @@ nav ul li a:hover {
         background: linear-gradient(to bottom, #000000, #000000f0);
     }
 
+    .dropdown-menu-end{
+        --bs-dropdown-link-hover-bg: #15121d;
+    }
 </style>
-<body class="corFundo">
+<body class="bodyWinery">
 
-<nav class="navbar navbar-expand-lg bg-body-tertiary corFundo">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="/Winery">
-            <img th:src="@{/imagens/logoWinery250x250new.png}" width="150px" alt="Logo da Winery">
-        </a>
-
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary"
+    style="background-color: transparent !important; margin-right: 15px; margin-left: 15px; padding-top: 20px !important;">
+    <div class="container-fluid d-flex justify-content-center">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="#">
+                        Vinhos
+                    </a>
+                </li>
 
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="#">
+                        Vinicolas
+                    </a>
+                </li>
 
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="#">
+                        Espumante
+                    </a>
+                </li>
             </ul>
+
+            <a class="navbar-brand" href="/Winery"
+                style="position: absolute; left: 50%; transform: translateX(-50%);">
+                <img th:src="@{/imagens/logoWinery250x250new.png}" width="175px" alt="Logo da Winery">
+            </a>
 
             <ul class="navbar-nav ml-auto">
 
@@ -115,9 +138,10 @@ nav ul li a:hover {
                 <a class="nav-link text-white dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">
                     Meu perfil
                   </a>
-                  <div class="dropdown-menu dropdown-menu-end" aria-labelledby="perfil-button">
-                    <a class="dropdown-item" href="/cliente/winery">Meus Dados</a>
-                    <a class="dropdown-item" href="/authentication/logout" onclick="showLogoutMessage()">Sair</a>
+                  <div class="dropdown-menu dropdown-menu-end" style="background-color: #1e1a28;" aria-labelledby="perfil-button">
+                    <a class="dropdown-item text-white" href="/cliente/winery">Meus Dados</a>
+                    <a class="dropdown-item text-white" href="/cliente/pedidos">Meus Pedidos</a>
+                    <a class="dropdown-item text-white" href="/authentication/logout" onclick="showLogoutMessage()">Sair</a>
                 </div>
                 </div>
                 <div class="dropdown" id="login-link">
@@ -125,9 +149,11 @@ nav ul li a:hover {
                       Faça login/crie seu login
                     </a>
                   </div>
-                </ul>
+            </ul>
         </div>
-    </nav>
+    </div>
+</nav>
+
 <div class="modal fade" id="alterarClienteModal" tabindex="-1" aria-labelledby="alterarClienteLabel" aria-hidden="true">
     <div class="modal-dialog modal-xl">
         <div class="modal-content fundoDoFormulario">
@@ -212,23 +238,32 @@ nav ul li a:hover {
 
 
 
-<div class="container-fluid"> <!-- Início do container para o carrossel -->
+<div class="container-fluid mt-3"> <!-- Início do container para o carrossel -->
     <div id="carouselExampleCaptions" class="carousel slide" style="max-width: 100%; height: 500px; margin: 0 auto;">
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
 
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img th:src="@{/imagens/fotoHome1.png}" class="d-block w-100" alt="..." style="max-width: 100%; height: 500px;">
+                <img src="https://evino-res.cloudinary.com/image/upload/f_auto,w_1920,dpr_1.0,t_banner/v1699303951/campaigns/2023/11_Novembro/2023_11_06_LancamentoTerreDiMario_IC/hero_1_v2_multiple_desktop.png" class="d-block w-100" alt="..." style="max-width: 100%; height: 500px;">
                 <div class="carousel-caption d-none d-md-block">
                     <!-- <h5>First slide label</h5>
                     <p>Some representative placeholder content for the first slide.</p> -->
                 </div>
             </div>
             <div class="carousel-item">
-                <img th:src="@{/imagens/fotoHome2.png}" class="d-block w-100" alt="..." style="max-width: 100%; height: 500px;">
+                <img src="https://www.divinho.com.br/media/mageplaza/bannerslider/banner/image/b/a/banner_divinho_verde_1920x520.png" class="d-block w-100" alt="..." style="max-width: 100%; height: 500px;">
+                <div class="carousel-caption d-none d-md-block">
+                    <!-- <h5>Second slide label</h5>
+                    <p>Some representative placeholder content for the second slide.</p> -->
+                </div>
+            </div>
+
+            <div class="carousel-item">
+                <img src="https://famigliavalduga.vteximg.com.br/arquivos/ids/162248/2457.6 Campanha HAPPY FRIDAY DOMNO - DESCONTOS INDIVIDUAIS Banners_desktop.png?v=638348776760800000" class="d-block w-100" alt="..." style="max-width: 100%; height: 500px;">
                 <div class="carousel-caption d-none d-md-block">
                     <!-- <h5>Second slide label</h5>
                     <p>Some representative placeholder content for the second slide.</p> -->
@@ -249,19 +284,19 @@ nav ul li a:hover {
 
 <div class="container">
     <div class="container text-center cardsProduto mx-auto">
-        <div class="cards-row" style="display: flex; flex-wrap: wrap; justify-content: center;">
-            <div class="col cardsProduto text-center mx-auto" th:each="produto : ${produtos}">
+        <div class="row" style="display: flex; flex-wrap: wrap; justify-content: center;">
+            <div class="col-auto cardsProduto text-center mx-auto" th:each="produto : ${produtos}">
                 <input type="hidden" th:id="${produto.idProduto}" th:attr="data-id=${produto.idProduto},data-nome=${produto.nomeProduto},data-avaliacao=${produto.avaliacaoProduto},data-descricao=${produto.descricaoProduto},data-preco=${produto.precoProduto},data-estoque=${produto.qtdEstoque},data-status=${produto.statusProduto}">
 
                 <!-- Encontre a imagem principal dentro da lista de imagens do produto -->
                 <div th:each="imagem, iterStat : ${produto.imagens}">
                     <div th:if="${imagem.imagemPrincipal}">
-                        <div class="card" style="height: 100%;"> <!-- Defina a altura do card igual à altura da imagem -->
+                        <div class="card" style="height: 100%; background-color: #1e1a28; border: none !important; box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5) !important;"> <!-- Defina a altura do card igual à altura da imagem -->
                             <img th:src="${'/'+imagem.url}" class="card-img-top" alt="..." style="width: 279px; height: 210px;">
-                            <div class="card-body" style="display: flex; flex-direction: column; justify-content: space-between; align-items: center; height: 100%;"> <!-- Centralize verticalmente todos os elementos -->
-                                <h5 class="card-title text-black " th:text="${produto.nomeProduto}"></h5>
+                            <div class="card-body" style="display: flex; flex-direction: column; justify-content: space-around; align-items: center; height: 100%;"> <!-- Centralize verticalmente todos os elementos -->
+                                <h5 class="card-title text-white " th:text="${produto.nomeProduto}"></h5>
                                 <div class="star-rating" th:attr="data-avaliacao=${produto.avaliacaoProduto}"></div>
-                                <p class="card-text text-black card-text-limit mt-3" th:text="'Preço: R$ ' + ${produto.precoProduto}"></p>
+                                <p class="card-text text-white card-text-limit mt-3" th:text="'Preço: R$ ' + ${produto.precoProduto}"></p>
                                 <form th:action="@{/Winery/produto}" method="get">
                                     <input type="hidden" name="id" th:value="${produto.idProduto}" />
                                     <button class="btn corButtonPadrao" type="submit">Detalhes</button>
@@ -306,14 +341,143 @@ nav ul li a:hover {
 
 
 <!-- Footer -->
-<footer class="text-center text-lg-start bg-light text-muted footerWinery">
+<!-- Remove the container if you want to extend the Footer to full width. -->
+<div class="bg-body-tertiary " style="background-color: transparent !important; margin-top: 100px;">
+    <!-- Footer -->
+    <footer class="text-center text-lg-start text-white" style="background-color: transparent !important;">
+        <!-- Grid container -->
+        <div class="container p-4 pb-0">
+            <!-- Section: Links -->
+            <section class="">
+                <!--Grid row-->
+                <div class="row">
+                    <!--Grid column-->
+                    <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
+                        <img class="mb-3" th:src="@{/imagens/logoWinery250x250new.png}" width="150px" alt="Logo da Winery">
 
+                        <p>
+                            Alguma dúvida? A gente ajuda você! <br>
+                            Horario de Atendimento: <br>
+                            De segunda a sexta-feira de 08h as 18h. Exceto feriados.
+                        </p>
+                    </div>
+                    <!--Grid column-->
 
-    <div class="text-center p-4 text-white" style="background-color: rgba(0, 0, 0, 0.05);">
-        © 2023 Winery:
-        <a class="text-reset fw-bold text-white" href="https://github.com/anaguimaraess/Winery">Download Project</a>
-    </div>
-</footer>
+                    <!--Grid column-->
+                    <div class="col-lg-2 col-md-6 mb-4 mb-md-0">
+                        <h5 class="text-white">Sobre a Winery</h5>
+
+                        <ul class="list-unstyled mb-0">
+                            <li>
+                                <a href="https://github.com/anaguimaraess/Winery" class="text-white"
+                                    style="text-decoration: none;">GitHub</a>
+                            </li>
+                            <li>
+                                <a href="#!" class="text-white" style="text-decoration: none;">Sobre Nós</a>
+                            </li>
+
+                        </ul>
+                    </div>
+                    <!--Grid column-->
+
+                    <!--Grid column-->
+                    <div class="col-lg-2 col-md-6 mb-4 mb-md-0">
+                        <h5 class="text-white">Suporte</h5>
+
+                        <ul class="list-unstyled mb-0">
+                            <li>
+                                <a href="#!" class="text-white" style="text-decoration: none;">Política de Frete</a>
+                            </li>
+                            <li>
+                                <a href="#!" class="text-white" style="text-decoration: none;">Política de
+                                    Privacidade</a>
+                            </li>
+                            <li>
+                                <a href="#!" class="text-white" style="text-decoration: none;">Termos de
+                                    Condições</a>
+                            </li>
+
+                        </ul>
+                    </div>
+                    <!--Grid column-->
+
+                    <!--Grid column-->
+                    <div class="col-lg-2 col-md-6 mb-4 mb-md-0">
+                        <h5 class="text-white">Categorias</h5>
+
+                        <ul class="list-unstyled mb-0">
+                            <li>
+                                <a href="#!" class="text-white" style="text-decoration: none;">Lançamentos</a>
+                            </li>
+                            <li>
+                                <a href="#!" class="text-white" style="text-decoration: none;">Vinho Tinto</a>
+                            </li>
+                            <li>
+                                <a href="#!" class="text-white" style="text-decoration: none;">Vinho Branco</a>
+                            </li>
+                            <li>
+                                <a href="#!" class="text-white" style="text-decoration: none;">Promoções</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <!--Grid column-->
+
+                    <!--Grid column-->
+                    <div class="col-lg-2 col-md-6 mb-4 mb-md-0">
+                        <h5 class="text-white">Formas de Pagamento</h5>
+
+                        <ul class="list-unstyled mb-0">
+                            <img th:src="@{/imagens/formaPagamento.webp}" width="200px" alt="">
+                        </ul>
+                    </div>
+                    <!--Grid column-->
+                </div>
+                <!--Grid row-->
+            </section>
+            <!-- Section: Links -->
+
+            <hr class="mb-4" />
+
+            <!-- Section: CTA -->
+            <section class="text-center">
+                <img src="https://static.kabum.com.br/conteudo/temas/001/imagens/rodape/selo_empresabuscape_horizontal.png"
+                    width="148" height="30" alt="Empresa reconhecida buscapé" loading="lazy"
+                    class="sc-kpKSZj bigULn">
+                <a href="https://transparencyreport.google.com/safe-browsing/search?url=kabum.com.br&amp;hl=pt-PT"
+                    target="_blank" rel="noreferrer" class="sc-lfYzqA kxaHhl" style="margin-left: 30px;">
+                    <img src="https://static.kabum.com.br/conteudo/temas/001/imagens/rodape/selo-google-site-seguro.png"
+                        alt="GOOGLE SITE SEGURO" width="130" height="46" loading="lazy" class="sc-kpKSZj bigULn"
+                        style="margin-left: 30px;"></a>
+                <img src="https://static.kabum.com.br/conteudo/temas/001/imagens/rodape/selo_ebit_kabum_horizontal.png"
+                    width="150" height="36" alt="Ebit diamante excelente" loading="lazy" class="sc-kpKSZj bigULn"
+                    style="margin-left: 30px;"></a>
+                <a id="seloEconfy" href="https://www.compreconfie.com.br/103388" target="_blank" rel="noreferrer"
+                    class="sc-lfYzqA kxaHhl" style="margin-left: 30px;">
+                    <img class="sc-kpKSZj bigULn compreConfieImg"
+                        src="https://selo.compreconfie.com.br/reputation/103388.png" width="57" height="60"
+                        alt="Compre e confie" loading="lazy" style="margin-left: 30px;"></a>
+                <img src="https://static.kabum.com.br/conteudo/temas/001/imagens/rodape/selo-ra.png" height="60"
+                    alt="Empresa campeã prêmio reclame aqui 2022" loading="lazy" class="sc-kpKSZj bigULn"
+                    style="margin-left: 30px;">
+            </section>
+            <!-- Section: CTA -->
+
+            <hr class="mb-4" />
+
+            <!-- Section: Social media -->
+        </div>
+        <!-- Grid container -->
+
+        <!-- Copyright -->
+        <div class="text-center p-3" style="background-color: transparent !important;">
+            © 2023 Copyright por Winery
+
+        </div>
+        <!-- Copyright -->
+    </footer>
+    <!-- Footer -->
+</div>
+<!-- End of .container -->
 
 
 
