--- a/src/main/resources/templates/meusPedidos.html
+++ b/src/main/resources/templates/meusPedidos.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="pt-br">
+<html lang="pt-br"  xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="utf-8">
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="../static/imagens/faviconWinery.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <link th:href="@{/imagens/faviconWinery.png}" rel="shortcut icon" type="image/x-icon">
 </head>
 <style>
     .bodyWinery {
@@ -55,8 +56,8 @@
                 </ul>
 
                 <a class="navbar-brand" href="/Winery"
-                    style="position: absolute; left: 50%; transform: translateX(-50%);">
-                    <img src="../static/imagens/logoWinery250x250new.png" width="175px" alt="Logo da Winery">
+                style="position: absolute; left: 50%; transform: translateX(-50%);">
+                <img th:src="@{/imagens/logoWinery250x250new.png}" width="175px" alt="Logo da Winery">
                 </a>
 
                 <ul class="navbar-nav ml-auto">
@@ -135,154 +136,32 @@
                     </div>
                 </li>
 
-                <li class="list-group-item border border-top border-end-0 border-bottom-0 border-start-0"
+
+                <th:block th:each="pedido, iterStat : ${pedidos}">
+                    <li class="list-group-item border border-top border-end-0 border-bottom-0 border-start-0"
                     style="background-color: #2c263a;  border-color: gray !important;">
                     <div class="row">
                         <div class="col-md-3 mt-2 text-white">
-                            <p>001</p>
+                            <p th:text="${pedido.id}"></p>
                         </div>
                         <div class="col-md-3 mt-2 text-white">
-                            <p>2023-11-08</p>
+                            <p th:text="${pedido.dataPedido}"></p>
                         </div>
                         <div class="col-md-2 mt-2 text-white">
-                            <p>R$ 100,00</p>
+                            <p th:text="${pedido.valorTotal}"></p>
                         </div>
                         <div class="col-md-2 mt-2 text-white">
-                            <p>Processando</p>
+                            <p th:text="${pedido.status}"></p>
                         </div>
                         <div class="col-md-2 mt-1">
-                            <button class="btn btn-primary botaoPadrao">Detalhes</button>
+                            <button class="btn btn-primary botaoPadrao"></button>
                         </div>
                     </div>
                 </li>
 
-                <li class="list-group-item border border-top border-end-0 border-bottom-0 border-start-0"
-                    style="background-color: #2c263a; border-color: gray !important;">
-                    <div class="row">
-                        <div class="col-md-3 mt-2 text-white">
-                            <p>001</p>
-                        </div>
-                        <div class="col-md-3 mt-2 text-white">
-                            <p>2023-11-08</p>
-                        </div>
-                        <div class="col-md-2 mt-2 text-white">
-                            <p>R$ 100,00</p>
-                        </div>
-                        <div class="col-md-2 mt-2 text-white">
-                            <p>Processando</p>
-                        </div>
-                        <div class="col-md-2 mt-1">
-                            <button class="btn btn-primary botaoPadrao">Detalhes</button>
-                        </div>
-                    </div>
-                </li>
+                </th:block>
 
-                <li class="list-group-item border border-top border-end-0 border-bottom-0 border-start-0"
-                    style="background-color: #2c263a; border-color: gray !important;">
-                    <div class="row">
-                        <div class="col-md-3 mt-2 text-white">
-                            <p>001</p>
-                        </div>
-                        <div class="col-md-3 mt-2 text-white">
-                            <p>2023-11-08</p>
-                        </div>
-                        <div class="col-md-2 mt-2 text-white">
-                            <p>R$ 100,00</p>
-                        </div>
-                        <div class="col-md-2 mt-2 text-white">
-                            <p>Processando</p>
-                        </div>
-                        <div class="col-md-2 mt-1">
-                            <button class="btn btn-primary botaoPadrao">Detalhes</button>
-                        </div>
-                    </div>
-                </li>
-
-                <li class="list-group-item border border-top border-end-0 border-bottom-0 border-start-0"
-                    style="background-color: #2c263a; border-color: gray !important;">
-                    <div class="row">
-                        <div class="col-md-3 mt-2 text-white">
-                            <p></p>
-                        </div>
-                        <div class="col-md-3 mt-2 text-white">
-                            <p></p>
-                        </div>
-                        <div class="col-md-2 mt-2 text-white">
-                            <p></p>
-                        </div>
-                        <div class="col-md-2 mt-2 text-white">
-                            <p></p>
-                        </div>
-                        <div class="col-md-2 mt-1">
-                            <!-- <button class="btn btn-primary botaoPadrao">Detalhes</button> -->
-                        </div>
-                    </div>
-                </li>
-
-                <li class="list-group-item border border-top border-end-0 border-bottom-0 border-start-0"
-                    style="background-color: #2c263a; border-color: gray !important;">
-                    <div class="row">
-                        <div class="col-md-3 mt-2 text-white">
-                            <p></p>
-                        </div>
-                        <div class="col-md-3 mt-2 text-white">
-                            <p></p>
-                        </div>
-                        <div class="col-md-2 mt-2 text-white">
-                            <p></p>
-                        </div>
-                        <div class="col-md-2 mt-2 text-white">
-                            <p></p>
-                        </div>
-                        <div class="col-md-2 mt-1">
-                            <!-- <button class="btn btn-primary botaoPadrao">Detalhes</button> -->
-                        </div>
-                    </div>
-                </li>
-
-                <li class="list-group-item border border-top border-end-0 border-bottom-0 border-start-0"
-                    style="background-color: #2c263a; border-color: gray !important;">
-                    <div class="row">
-                        <div class="col-md-3 mt-2 text-white">
-                            <p></p>
-                        </div>
-                        <div class="col-md-3 mt-2 text-white">
-                            <p></p>
-                        </div>
-                        <div class="col-md-2 mt-2 text-white">
-                            <p></p>
-                        </div>
-                        <div class="col-md-2 mt-2 text-white">
-                            <p></p>
-                        </div>
-                        <div class="col-md-2 mt-1">
-                            <!-- <button class="btn btn-primary botaoPadrao">Detalhes</button> -->
-                        </div>
-                    </div>
-                </li>
-
-                <li class="list-group-item border border-top border-end-0 border-bottom-0 border-start-0"
-                    style="background-color: #2c263a; border-color: gray !important;">
-                    <div class="row">
-                        <div class="col-md-3 mt-2 text-white">
-                            <p></p>
-                        </div>
-                        <div class="col-md-3 mt-2 text-white">
-                            <p></p>
-                        </div>
-                        <div class="col-md-2 mt-2 text-white">
-                            <p></p>
-                        </div>
-                        <div class="col-md-2 mt-2 text-white">
-                            <p></p>
-                        </div>
-                        <div class="col-md-2 mt-1">
-                            <!-- <button class="btn btn-primary botaoPadrao">Detalhes</button> -->
-                        </div>
-                    </div>
-                </li>
-                
-                <!-- Adicione mais itens aqui conforme necessário -->
+            
 
             </ul>
         </div>
@@ -302,7 +181,7 @@
                     <div class="row">
                         <!--Grid column-->
                         <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
-                            <img src="../static/imagens/logoWinery250x250new.png" width="150px" alt="Logo da Winery">
+                            <img class="mb-3" th:src="@{/imagens/logoWinery250x250new.png}" width="150px" alt="Logo da Winery">
 
                             <p>
                                 Alguma dúvida? A gente ajuda você! <br>
