--- a/src/main/resources/templates/formaPagamento.html
+++ b/src/main/resources/templates/formaPagamento.html
@@ -80,26 +80,23 @@
                 </a>
 
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item ml-auto">
-                        <a class="nav-link text-white" href="#">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="bi bi-cart3" viewBox="0 0 16 16">
-                                <path
-                                    d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
-                            </svg>
-                            Carrinho
-                        </a>
-                    </li>
 
                     <li class="nav-item ml-auto">
-                        <a class="nav-link text-white" href="/authentication/login">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="bi bi-person-fill" viewBox="0 0 16 16">
-                                <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3Zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z" />
-                            </svg>
-                            Entrar
+                    <div  id="perfil-button">
+                    <a class="nav-link text-white dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">
+                        Meu perfil
+                      </a>
+                      <div class="dropdown-menu dropdown-menu-end" style="background-color: #1e1a28;" aria-labelledby="perfil-button">
+                        <a class="dropdown-item text-white" href="/cliente/winery">Meus Dados</a>
+                        <a class="dropdown-item text-white" href="/cliente/pedidos">Meus Pedidos</a>
+                        <a class="dropdown-item text-white" href="/authentication/logout" onclick="showLogoutMessage()">Sair</a>
+                    </div>
+                    </div>
+                    <div class="dropdown" id="login-link">
+                        <a class="nav-link text-white" href="/Winery/cliente" >
+                          Faça login/crie seu login
                         </a>
-                    </li>
+                      </div>
                 </ul>
             </div>
         </div>
