--- a/src/main/resources/templates/checkoutPagamento.html
+++ b/src/main/resources/templates/checkoutPagamento.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Winery:: Confirmação do Pedido</title>
     <link th:href="@{/imagens/faviconWinery.png}" rel="shortcut icon" type="image/x-icon">
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
@@ -16,7 +17,12 @@
         background-repeat: no-repeat !important;
         background-attachment: fixed !important;
     }
-
+    .position-absolute {
+    position: absolute;
+    top: 50%; /* Coloca o elemento no centro vertical */
+    left: 50%; /* Coloca o elemento no centro horizontal */
+    transform: translate(-50%, -50%); /* Move o elemento de volta para cima e para a esquerda pela metade de sua largura e altura */
+}
     .nome-produto {
         width: 200px;
         overflow: hidden;
@@ -230,6 +236,7 @@
             </div>
         </div>
     </div>
+    <div id="modalMessages" class="position-absolute"></div>
 
 
     <!-- Remove the container if you want to extend the Footer to full width. -->
