corrigindo estrutura de pedido (refatorando)

--- a/src/main/resources/templates/carrinhoCompras.html
+++ b/src/main/resources/templates/carrinhoCompras.html
@@ -913,7 +913,7 @@ function irParaPagamento() {
             logradouro: "",
             numero: "", 
             bairro: "", 
-            id: "", 
+            idEndereco: "",
             cidade: "", 
             uf: "", 
             complemento: "",
@@ -930,7 +930,7 @@ function irParaPagamento() {
         // numero: document.getElementById("numeroLogado").innerText, // Adicione um id correspondente no seu HTML
         bairro: document.getElementById("bairroLogado").innerText,
         cep: document.getElementById("cepLogado").innerText,
-        id: document.querySelector('.enderecinho:checked').value,
+        idEndereco: document.querySelector('.enderecinho:checked').value,
         cidade: document.getElementById("cidadeUfLogado").innerText.split(" - ")[0],
         uf: document.getElementById("cidadeUfLogado").innerText.split(" - ")[1],
         complemento: document.getElementById("complementoLogado").innerText,
