--- a/src/main/resources/templates/listaProdutoEstoquista.html
+++ b/src/main/resources/templates/listaProdutoEstoquista.html
@@ -29,7 +29,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <ul class="navbar-nav me-auto ">
                 <li class="nav-item">
                     <a class="nav-link text-white" href="/estoque/listarProdutos">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bag-check" viewBox="0 0 16 16">
@@ -40,6 +40,15 @@
                     </a>
                 </li>
             </ul>
+
+            <ul class="navbar-nav me-auto ">
+              <li class="nav-item">
+                  <a class="nav-link text-white" href="/estoque/listarPedidos">
+                     
+                      Pedidos dos clientes
+                  </a>
+              </li>
+          </ul>
             <form class="d-flex" role="search">
                 <a class="nav-link text-white" href="/authentication/logout">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-right" viewBox="0 0 16 16">
